# Taiex_analysis

./: README.md  buy_hold.py  main.py  pyproject.toml  taiex_analysis.py  taiex_fetch.py  taiex_fetch_yf.py
data/: 0050.TW.csv  0050.csv  0056.TW.csv  0056.csv  2330.TW.csv  2330.csv  2412.TW.csv  2412.csv  2880.TW.csv  2880.csv  2884.TW.csv  2884.csv  4142.csv  5880.csv  6547.csv  TSLA.csv
